# GooFit

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .syntastic_cpp_config  CMakeLists.txt  ChangeLog  INSTALL.md  LICENSE  README.md  my.supp
.github/workflows/: autoTest.yml  cpp-linter.yaml
include/: GooStatsNLLCheck.h  GooStatsNLLCheckLinkDef.h
include/goofit/: BinnedDataSet.h  DataSet.h  FitControl.h  FitManager.h  FitManagerMinuit1.h  GlobalCudaDefines.h  PdfBase.h  UnbinnedDataSet.h  Variable.h
include/goofit/PDFs/: DataPdf.h  ExpPdf.hh  GooPdf.h  SumPdf.h
src/PDFs/: CMakeLists.txt  ExpPdf.cu  FitControl.cu  GooPdf.cu  PdfBase.cu  SumPdf.cu
src/goofit/: BinnedDataSet.cc  CMakeLists.txt  DataSet.cc  FitControl.cc  FitManager.cc  FitManagerMinuit1.cc  GooStatsNLLCheck.cc  PdfBase.cc  UnbinnedDataSet.cc  Variable.cc
tests/: CMakeLists.txt  NLL_CHECK_reference.root  NLLtest.cc  expFit.cc  fit.cc  fit.h
